--- a/landings/nmcontrols/index.html
+++ b/landings/nmcontrols/index.html
@@ -8,18 +8,18 @@
     <meta name="description" content="">
     <link rel="shortcut icon" href="images/favicon.ico">
     <title>NmControls</title>
-    <link href="./src/scss/bootstrap.min.css" rel="stylesheet">
-    <link href="./src/scss/brands.min.css" rel="stylesheet">
+    <link href="./files/scss/bootstrap.min.css" rel="stylesheet">
+    <link href="./files/scss/brands.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet" type="text/css">
-    <link href="./src/scss/health.css" rel="stylesheet">
-    <link href="./src/scss/red.css" rel="stylesheet">
+    <link href="./files/scss/health.css" rel="stylesheet">
+    <link href="./files/scss/red.css" rel="stylesheet">
     <link href="public/main.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#navbar" data-offset="100">
     <nav class="navbar">
         <div class="container">
-            <a class="navbar-brand" href="/"><img class="img-fluid" src="src/images/Nm-Control-Serveis-logo.png"
+            <a class="navbar-brand" href="/"><img class="img-fluid" src="files/images/Nm-Control-Serveis-logo.png"
                     alt="NmControl Serveis">
                 <div class="click-to-call d-none d-md-flex">
                     <a href="tel:628887996" target="_blank">
@@ -73,7 +73,7 @@
                     <!-- // end .col -->
 
                     <!-- <div class="col-md-6 position-static-md">
-                        <div class="image-align-bottom"> <img src="src/images/doctor-header.png" alt="Doctor"
+                        <div class="image-align-bottom"> <img src="files/images/doctor-header.png" alt="Doctor"
                                 class="center-block img-fluid"></div>
                     </div> -->
                     <!-- // end .col -->
@@ -153,7 +153,7 @@
                         </li>
                     </ul> -->
 
-                    <img src="src/images/nm-controls-quienes-somos.jpg" class="img-fluid"
+                    <img src="files/images/nm-controls-quienes-somos.jpg" class="img-fluid"
                         alt="NmControls Quienes somos">
 
                 </div>
@@ -241,7 +241,7 @@
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4 order-md-1 order-lg-0">
                     <div class="thumbnail">
-                        <img class="img-fluid" src="src/images/nmcontrol-servicio-desinfectacion-covid-19.jpg"
+                        <img class="img-fluid" src="files/images/nmcontrol-servicio-desinfectacion-covid-19.jpg"
                             alt="Servicio Desinfección Covid-19">
                         <div class="caption">
                             <h6 class="caption-title">Desinfección Anti COVID-19</h6>
@@ -255,7 +255,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 order-md-3 offset-md-3 offset-lg-0 order-lg-0">
                     <div class="thumbnail">
-                        <img class="img-fluid" src="src/images/nmcontrol-servicio-mantenimiento-limpieza.jpg"
+                        <img class="img-fluid" src="files/images/nmcontrol-servicio-mantenimiento-limpieza.jpg"
                             alt="Servicio de limpieza">
                         <div class="caption">
                             <h6 class="caption-title">Mantenimiento y Limpieza</h6>
@@ -271,7 +271,7 @@
                 <div class="col-12 col-md-6 col-lg-4 order-md-2 order-lg-0">
                     <div class="thumbnail">
                         <img class="img-fluid" class="img-fluid"
-                            src="src/images/nmcontrol-servicio-conserjeria-porteria.jpg"
+                            src="files/images/nmcontrol-servicio-conserjeria-porteria.jpg"
                             alt="Sericio Conserjería y Porteria">
                         <div class="caption">
                             <h6 class="caption-title">Portería y Conserjería</h6>
@@ -351,9 +351,9 @@
 
     <!-- <script src="js/includes/contact_form.js"></script> -->
     <!-- <script src="js/main.js"></script> -->
-    <!-- <script src="./src/js/fontawesome.js"></script> -->
-    <!-- <script src="./src/js/solid.js"></script> -->
-    <!-- <script src="./src/js/brands.js"></script> -->
+    <!-- <script src="./files/js/fontawesome.js"></script> -->
+    <!-- <script src="./files/js/solid.js"></script> -->
+    <!-- <script src="./files/js/brands.js"></script> -->
     <script src="public/main.js"></script>
 </body>
 
