--- a/landings/nmcontrols/terminos.html
+++ b/landings/nmcontrols/terminos.html
@@ -8,18 +8,18 @@
     <meta name="description" content="">
     <link rel="shortcut icon" href="images/favicon.ico">
     <title>NmControls - Terminos y Condiciones</title>
-    <link href="./src/scss/bootstrap.min.css" rel="stylesheet">
-    <!-- <link href="./src/scss/brands.min.css" rel="stylesheet"> -->
+    <link href="./files/scss/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="./files/scss/brands.min.css" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,700" rel="stylesheet" type="text/css">
-    <link href="./src/scss/health.css" rel="stylesheet">
-    <link href="./src/scss/red.css" rel="stylesheet">
+    <link href="./files/scss/health.css" rel="stylesheet">
+    <link href="./files/scss/red.css" rel="stylesheet">
     <link href="public/main.css" rel="stylesheet">
 </head>
 
 <body>
     <nav class="navbar">
         <div class="container">
-            <a class="navbar-brand" href="/"><img class="img-fluid" src="src/images/Nm-Control-Serveis-logo.png"
+            <a class="navbar-brand" href="/"><img class="img-fluid" src="files/images/Nm-Control-Serveis-logo.png"
                     alt="NmControl Serveis">
                 <div class="click-to-call d-none d-md-flex">
                     <a href="tel:628887996" target="_blank">
@@ -133,9 +133,9 @@
 
     <!-- <script src="js/includes/contact_form.js"></script> -->
     <!-- <script src="js/main.js"></script> -->
-    <!-- <script src="./src/js/fontawesome.js"></script> -->
-    <!-- <script src="./src/js/solid.js"></script> -->
-    <!-- <script src="./src/js/brands.js"></script> -->
+    <!-- <script src="./files/js/fontawesome.js"></script> -->
+    <!-- <script src="./files/js/solid.js"></script> -->
+    <!-- <script src="./files/js/brands.js"></script> -->
     <script src="public/main.js"></script>
 </body>
 
