--- a/landings/nmcontrols/index.html
+++ b/landings/nmcontrols/index.html
@@ -19,14 +19,16 @@
 <body data-spy="scroll" data-target="#navbar" data-offset="100">
     <nav class="navbar">
         <div class="container">
-            <a class="navbar-brand" href="/"><img class="img-fluid" src="files/images/Nm-Control-Serveis-logo.png"
-                    alt="NmControl Serveis">
-                <div class="click-to-call d-none d-md-flex">
-                    <a href="tel:628887996" target="_blank">
-                        <span class="phone-icon"><i class="fa fa-phone"></i></span> <span>628 88 79 96</span>
-                    </a>
-                </div>
+            <a class="navbar-brand" href="/">
+                <img class="img-fluid" src="files/images/Nm-Control-Serveis-logo.png" alt="NmControl Serveis">
             </a>
+            <div class="click-to-call d-none d-md-flex align-items-center">
+                <p style="margin-bottom: 0;">Informate sin compromiso&nbsp;&nbsp;</p>
+                <a href="tel:628887996" target="_blank">
+                    <span class="phone-icon"><i class="fa fa-phone"></i></span> <span>628 88 79 96</span>
+                </a>
+            </div>
+
         </div>
     </nav>
     <!-- // End Fixed navbar -->
